--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,11 @@
   <link
   rel="stylesheet"
   href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-  integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+   integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
   crossorigin="anonymous"
   />
 </head>
-<body>
+<body background="https://img.huffingtonpost.com/asset/5dae1a3f210000ba1e34a9cd.jpeg?ops=1778_1000">
   <app-root></app-root>
 </body>
 </html>
