--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   crossorigin="anonymous"
   />
 </head>
-<body>
+<body background="https://img.huffingtonpost.com/asset/5dae1a3f210000ba1e34a9cd.jpeg?ops=1778_1000">
   <app-root></app-root>
 </body>
 </html>
